# orbit

./: .gitignore  AGENTS.md  CLA.md  CLAUDE.md  CNAME  Cargo.toml  README.md  claude.md  clippy.toml  flake.nix  index.html  install.sh  justfile  orbt.gpg.pub  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.github/workflows/: apt.yml  ci.yml  publish.yml  release.yml
.sisyphus/: ralph-loop.local.md
crates/orbit/: Cargo.toml
crates/orbit-alias/: Cargo.toml  README.md
crates/orbit-alias/src/: lib.rs
crates/orbit-core/: Cargo.toml
crates/orbit-core/src/: config.rs  error.rs  lib.rs
crates/orbit-core/src/vt/: grid.rs  mod.rs  parser.rs
crates/orbit-protocol/: Cargo.toml
crates/orbit-protocol/src/: encoding.rs  error.rs  lib.rs  messages.rs  socket.rs  types.rs
crates/orbit/src/: app.rs  events.rs  ipc.rs  lib.rs  main.rs  ssh.rs  tui.rs
crates/orbit/src/tui/: mod.rs  theme.rs
crates/orbit/src/tui/widgets/: agent_monitor.rs  command_palette.rs  context_menu.rs  eclipse_modal.rs  launch_modal.rs  mod.rs  settings_modal.rs  spaces_sidebar.rs  status_bar.rs  tab_bar.rs
crates/orbitd/: Cargo.toml
crates/orbitd/src/: agent.rs  io.rs  ipc.rs  lib.rs  main.rs  pty.rs  session.rs
crates/orbt/: Cargo.toml
crates/orbt-core/: Cargo.toml
crates/orbt-core/src/: config.rs
crates/orbt-core/src/vt/: grid.rs  parser.rs
crates/orbt-protocol/: Cargo.toml
crates/orbt-protocol/src/: encoding.rs  lib.rs  messages.rs  socket.rs  types.rs
crates/orbt/src/: app.rs  events.rs  ipc.rs  main.rs  ssh.rs
crates/orbt/src/daemon/: agent.rs  ipc.rs  mod.rs  session.rs
crates/orbt/src/tui/: mod.rs  theme.rs
crates/orbt/src/tui/widgets/: agent_monitor.rs  command_palette.rs  context_menu.rs  eclipse_modal.rs  launch_modal.rs  mobile_confirm.rs  mobile_nav.rs  mobile_spaces.rs  mod.rs  settings_modal.rs  spaces_sidebar.rs  status_bar.rs  tab_bar.rs
crates/orbtd/: Cargo.toml
crates/orbtd/src/: agent.rs  ipc.rs  lib.rs  pty.rs  session.rs
dists/stable/: InRelease  Release  Release.gpg  Release.tmp
dists/stable/main/binary-amd64/: Packages
docs/: AGENT_PANEL_STATUS.md
docs/superpowers/plans/: 2026-07-11-ui-polish-sprint.md
docs/superpowers/specs/: 2026-07-11-ui-polish-sprint-design.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/aur-orbit/: .SRCINFO  PKGBUILD
packaging/aur-orbit-bin/: .SRCINFO  PKGBUILD
packaging/aur-src/: .SRCINFO  PKGBUILD
packaging/scoop/: orbt.json
packaging/winget/manifests/l/Linus/Orbt/0.1.10/: Linus.Orbt.locale.en-US.yaml
pool/main/: orbt_0.1.10_amd64.deb
tools/: Cargo.toml  cursor_diag.rs  full_dump.rs  integration_test.rs  pane_dump.rs  render_preview.rs  scenario_test.rs  vt_trace.rs
