[workspace]
resolver = "2"
members = [
    "crates/orbt",
    "crates/orbt-protocol",
    "crates/orbt-core",
    "crates/orbit-alias",
    # "crates/orbit-plugin",  # Phase 4 (Mars): WASM plugin runtime. Uncomment when activating.
]
exclude = ["tools"]

[workspace.package]
version = "0.1.10"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-only"
repository = "https://github.com/linuszz/orbt"
authors = ["Linus"]

# Unified dependency versions. Each crate pulls via `{ workspace = true }`.
# See 06_tech-design/01-tech-stack-and-workspace.md §2.2 and v5 pre-implementation checklist GAP 1.
[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal", "fs", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# bincode 2.x: the `serde` feature flag is REQUIRED to access the `bincode::serde`
# module (encode_to_vec / decode_from_slice). Message types only derive
# serde::Serialize/Deserialize; do NOT derive bincode::Encode.
bincode = { version = "2", features = ["serde"] }
toml = "0.8"  # config file format

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
regex = "1"
futures = "0.3"
unicode-width = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI (used by `orbit` client)
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# PTY + IPC + VT (shared by `orbit` and `orbtd`)
interprocess = { version = "2", features = ["tokio"] }
portable-pty = "0.9"
vte = "0.13"

# Process metrics (orbtd-only; declared in orbtd/Cargo.toml as an optional dep).
# sysinfo = "0.30"

# Unix-specific (SO_PEERCRED, getuid). Unix-only; gate with #[cfg(unix)].
libc = "0.2"

# Clipboard (orbtd-only; used for CopyToClipboard IPC handler)
arboard = "3"

# Phase 3 dependencies
russh = { version = "0.62", default-features = false, features = ["aws-lc-rs", "rsa"] }
rpassword = "7"
image = { version = "0.25", default-features = false, features = ["png"] }

# Internal crates (path + version so `cargo publish` resolves from crates.io)
orbt-protocol = { path = "crates/orbt-protocol", version = "0.1" }
orbt-core = { path = "crates/orbt-core", version = "0.1" }


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# Faster dev builds: skip optimizations, keep some debug info.
[profile.dev]
opt-level = 0
debug = 1
