[package]
name = "orbit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core domain model and VT emulation shared between orbit and orbitd."

[dependencies]
orbit-protocol = { workspace = true }
vte = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
unicode-width = { workspace = true }
