[package]
name = "orbit-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wire protocol types shared between the orbit TUI client and the orbitd daemon."

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
