[package]
name = "orbt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Orbit — TUI client. Universal terminal workspace."

[[bin]]
name = "orbt"
path = "src/main.rs"

[lib]
name = "orbt_tui"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
interprocess = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
orbt-protocol = { workspace = true }
orbt-core = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
unicode-width = { workspace = true }
arboard = { workspace = true }
russh = { workspace = true }
rpassword = { workspace = true }
image = { workspace = true }
portable-pty = { workspace = true }
regex = { workspace = true }
